00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  namespace: voting-app
  name: voting-app
