result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting-app
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: andresiglesiasb/result:v1.0.0
        name: result
        ports:
        - containerPort: 80
          name: result
